UI Issue - Menu addon dropdown text was not readable

--- a/app/assets/css/ms-admin.css
+++ b/app/assets/css/ms-admin.css
@@ -1882,6 +1882,9 @@ body #wpwrap .ms-wrap .wpmui-radio-slider-wrapper.inline-label .wpmui-field-labe
 #wpwrap .ms-wrap tr.ms-assigned .ms-empty-note-wrapper {
   display: none;
 }
+#wpwrap .ms-wrap tr.ms-assigned .column-match .wpmui-select-wrapper .select2-selection__rendered {
+  color: #777;
+}
 #wpwrap .ms-wrap tr.ms-assigned .wpmui-select-wrapper .ms-memberships {
   margin: 0;
   width: 100%;
